HelloUltraviolet/Fixtures/RejectedSource/Patterns/EnumModalPatternsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the EnumModalPatternsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2741", "diag.17.EnumModalPatterns")
